konflux-core/release/core/v1_namespace_release-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
  name: release-service
