konflux-core/release/core/v1_service_release-service-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-service-webhook-service
  namespace: release-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: controller-manager
