konflux-core/release/core/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_release-service-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-service-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: release-service-webhook-service
      namespace: release-service
      path: /validate-appstudio-redhat-com-v1alpha1-release
  failurePolicy: Fail
  name: vrelease.kb.io
  rules:
  - apiGroups:
    - appstudio.redhat.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - releases
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: release-service-webhook-service
      namespace: release-service
      path: /validate-appstudio-redhat-com-v1alpha1-releaseplan
  failurePolicy: Fail
  name: vreleaseplan.kb.io
  rules:
  - apiGroups:
    - appstudio.redhat.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - releaseplans
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: release-service-webhook-service
      namespace: release-service
      path: /validate-appstudio-redhat-com-v1alpha1-releaseplanadmission
  failurePolicy: Fail
  name: vreleaseplanadmission.kb.io
  rules:
  - apiGroups:
    - appstudio.redhat.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - releaseplanadmissions
  sideEffects: None
